--- a/model/tf_idf_NB_cross_val.ipynb
+++ b/model/tf_idf_NB_cross_val.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd, numpy as np\n",
@@ -18,13 +20,16 @@
     "from bs4 import BeautifulSoup\n",
     "import re\n",
     "from sklearn.metrics import f1_score\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer"
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.metrics import make_scorer, roc_auc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_data = pd.read_csv('../data/raw_data/train.csv')\n",
@@ -39,8 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vectorizer = CountVectorizer(strip_accents='unicode',lowercase=True,stop_words='english', analyzer=\"word\",token_pattern=r'\\w{1,}')\n",
@@ -52,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -65,10 +74,12 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import make_scorer, roc_auc_score\n",
+    "\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
@@ -856,19 +867,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('tfidf', TfidfTransformer(norm=None, smooth_idf=True, sublinear_tf=False, use_idf=True)), ('clf', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'grid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-fb6b380b5a97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_estimator_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'grid' is not defined"
+     ]
     }
    ],
    "source": [
@@ -877,27 +888,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision =  0.6950184206311069\n",
-      "Recall =  0.5479919171507956\n",
-      "F_score =  0.7823133467363058\n",
-      "CCR =  0.9142986651661509\n",
-      "ROC_AUC =  0.8165141466626566\n",
+      "Precision =  0.707512413904\n",
+      "Recall =  0.423368158727\n",
+      "F_score =  0.729636229736\n",
+      "CCR =  0.877426615399\n",
+      "ROC_AUC =  0.801656094368\n",
       "\n",
       "Confusion Matrix: \n",
-      " [[54156  3579]\n",
-      " [ 1904  4339]]\n",
+      " [[51719  6016]\n",
+      " [ 1826  4417]]\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "vectorizer = TfidfTransformer(norm=None, smooth_idf=True, sublinear_tf=False, use_idf=True)\n",
+    "train_feature_vectors_sparse = vectorizer.fit_transform(train_feature_vectors_sparse)\n",
+    "test_feature_vectors_sparse = vectorizer.fit_transform(test_feature_vectors_sparse)\n",
+    "\n",
     "clf = MultinomialNB()\n",
     "\n",
     "clf.fit(train_feature_vectors_sparse, train_labels)\n",
@@ -923,7 +938,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -944,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
